<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <LinearLayout  		 
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical">
         
         <LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="30dip"
			android:gravity="center_vertical"
			android:background="@color/titleBackground" >
			
			<ImageView
			android:layout_height="26dip"
			android:layout_width="wrap_content"
			android:src="@drawable/storageroom" />
			
			<TextView
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_weight="1"
			android:text="@string/activityTitleDetails"
			android:textSize="20dip"
			android:textStyle="bold"
			android:textColor="@color/titleText" />
    	
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        android:padding="5dip"
	        android:background="@android:drawable/screen_background_light">
	        
	        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	   		android:layout_marginBottom="8dip"
	        android:background="@drawable/detailitem_background_shape" >
		        <TextView
		        	android:id="@+id/name_text"
		        	android:layout_width="fill_parent"
		        	android:layout_height="wrap_content"
		        	android:textSize="20sp"
		        	android:textStyle="bold" />
		        <RatingBar
		        	android:id="@+id/rating_bar"
		        	style="?android:attr/ratingBarStyleSmall"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
			   		android:layout_marginBottom="8dip"
		        	android:isIndicator="true"
		        	android:numStars="5"
		        	android:rating="0" />
		       	<ImageView
		       		android:id="@+id/detailpic_image"
		       		android:layout_width="fill_parent"
		     	    android:layout_height="wrap_content"
		     	    android:layout_marginTop="5dip"
		     	    android:layout_marginBottom="5dip"
		     	    android:src="@drawable/ic_contact_picture" />
		        <TextView
		        	android:id="@+id/description_text"
		        	android:layout_width="fill_parent" 
			   		android:layout_height="wrap_content"
			   		android:layout_marginBottom="8dip"
			   		android:fadingEdge="vertical"
		        	android:textSize="14sp" />
			</LinearLayout>
	
	        <TextView
	        	android:id="@+id/address_label"
	        	android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
	        	android:textSize="14sp"
	        	android:textStyle="bold"
	        	android:textColor="@color/detailitem_labeltext"
	        	android:text="@string/address_label" />
	        <TextView
	        	android:id="@+id/address_text"
	        	android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
		   		android:layout_marginBottom="8dip"
	        	android:textSize="14sp"
	        	android:background="@drawable/detailitem_background_shape" />
	        <TextView
	        	android:id="@+id/website_label"
	        	android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
	        	android:textSize="14sp"
	        	android:textStyle="bold"
	        	android:textColor="@color/detailitem_labeltext"
	        	android:text="@string/website_label" />
	        <TextView
	        	android:id="@+id/website_text"
	        	android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
		   		android:layout_marginBottom="8dip"
	        	android:textSize="14sp"
	        	android:background="@drawable/detailitem_background_shape"
	        	android:autoLink="web" />
	        <TextView
	        	android:id="@+id/lastvisit_label"
	        	android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
	        	android:textSize="14sp"
	        	android:textStyle="bold"
	        	android:textColor="@color/detailitem_labeltext"
	        	android:text="@string/lastvisit_label" />
	        <TextView
	        	android:id="@+id/lastvisit_text"
	        	android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
		   		android:layout_marginBottom="8dip"
	        	android:textSize="14sp"
	        	android:background="@drawable/detailitem_background_shape" />
	        <TextView
	        	android:id="@+id/pricerange_label"
	        	android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
	        	android:textSize="14sp"
	        	android:textStyle="bold"
	        	android:textColor="@color/detailitem_labeltext"
	        	android:text="@string/pricerange_label" />
	        <TextView
	        	android:id="@+id/pricerange_text"
	        	android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
		   		android:layout_marginBottom="8dip"
	        	android:textSize="14sp"
	        	android:background="@drawable/detailitem_background_shape" />
	        <TextView
	        	android:id="@+id/veggi_label"
	        	android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
	        	android:textSize="14sp"
	        	android:textStyle="bold"
	        	android:textColor="@color/detailitem_labeltext"
	        	android:text="@string/vegetarianmenu_text" />
	        <TextView
	        	android:id="@+id/veggi_text"
	        	android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
		   		android:layout_marginBottom="15dip"
	        	android:textSize="14sp"
	        	android:background="@drawable/detailitem_background_shape" />        
	
			<TextView
	        	android:id="@+id/created_text"
	        	android:layout_width="wrap_content" 
		   		android:layout_height="wrap_content"
	        	android:textSize="10sp"
	        	android:textStyle="italic"
	        	android:textColor="#888888" />
       	</LinearLayout>

  </LinearLayout>
  
</ScrollView>
